--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,8 +1,10 @@
 :root {
-	--background-color     : #242529;
-	--primary-text-color   : #FFFFFF;
-	--accent-text-color    : #1D7FFF;
-	--secondary-text-color : #838486;
+	--background-color       : #242529;
+	--primary-text-color     : #FFFFFF;
+	--accent-text-color      : #1D7FFF;
+	--secondary-text-color   : #838486;
+	--feedback-success-color : #4CAF50; /* Green for success feedback */
+	--feedback-error-color   : #F44336; /* Red for error feedback */
 }
 
 html {
@@ -80,9 +82,9 @@ body {
 
 #test-cases-list {
 	padding-bottom : 15px;
-	display: flex;
-	flex-direction: column;
-	gap: 0.5em;
+	display        : flex;
+	flex-direction : column;
+	gap            : 0.5em;
 }
 
 h1 {
@@ -133,7 +135,7 @@ textarea::placeholder {
 	display               : grid;
 	grid-template-columns : 1em auto;
 	gap                   : 0.8em;
-	margin-left: 2em;
+	margin-left           : 2em;
 }
 
 input[type='checkbox'] {
@@ -172,14 +174,37 @@ input[type='checkbox']::before {
 }
 
 input[type='checkbox']:checked::before {
-	color: var(--accent-text-color);
-	border             : 0.1em solid currentColor;
+	color     : var(--accent-text-color);
+	border    : 0.1em solid currentColor;
 	transform : scale(1);
 }
 
 input[type='checkbox']:focus {
 	outline        : max(2px, 0.15em) solid currentColor;
 	outline-offset : max(2px, 0.15em);
+}
+
+
+/* Feedback icons */
+#feedback-section {
+	position       : fixed;
+	right          : 0;
+	bottom         : 0;
+	display        : flex;
+	flex-direction : row;
+	align-items    : center;
+	height: 30px;
+}
+#feedback-section > div {
+	padding : 3px 10px;
+}
+
+#green-feedback__container {
+	background : rgba(76, 175, 80, 0.25);
+}
+
+#red-feedback__container {
+	background : rgb(244, 67, 54, 0.25);
 }
 
 /* HTML: <div class="loader"></div> */
